[IMP] Split DSV up specific tests

--- a/connector_bots/util/Makefile
+++ b/connector_bots/util/Makefile
@@ -1,10 +1,19 @@
-all: botsplugin
+pwd := $(shell pwd)
 
-botsplugin: bots_odoo_dsv_plugin.zip
+all: base dsv_tests
 
-bots_odoo_dsv_plugin.zip:
+base: bots_odoo_base_plugin.zip
+
+dsv_tests: bots_odoo_dsv_plugin.zip
+
+bots_odoo_base_plugin.zip:
 	cd bots && \
-	zip -r ../bots_odoo_dsv_plugin.zip * 
+	zip -r ../bots_odoo_base_plugin.zip * 
+
+bots_odoo_dsv_plugin.zip: bots_odoo_base_plugin.zip $(shell find ./tests/dsv/)
+	cp bots_odoo_base_plugin.zip bots_odoo_dsv_plugin.zip && \
+	cd tests/dsv && \
+	zip -r $(pwd)/bots_odoo_dsv_plugin.zip *
 
 clean:
-	rm -f bots_odoo_dsv_plugin.zip
+	rm -f bots_odoo_base_plugin.zip bots_odoo_dsv_plugin.zip
